Employee collapse fixed: 1. bas, 2. remember 3.hide CalenderButton fix: month, week Popover: först steg; Commitments adderigns förstördes

--- a/Dashboard.Web/wwwroot/css/allEmployee.css
+++ b/Dashboard.Web/wwwroot/css/allEmployee.css
@@ -24,7 +24,7 @@ button:focus {
     padding: 2%;
     /*max-height: 600px;*/
     min-height: 440px;
-    min-width: 1100px;
+    min-width: 1050px;
     /*overflow-y: scroll;*/
 }
 
@@ -47,13 +47,10 @@ button:focus {
     margin-bottom: 7%;
 }
 
-.calendarbutton:active, .calendarbutton:focus {
+
+.calendarbutton.active {
     background-color: #bedafd;
 }
-
-/*.active {
-    background-color: #bedafd;
-}*/
 
 .calendarbutton {
     background-color: #d0d0d0;
@@ -127,30 +124,7 @@ tr > button.glyphicon.glyphicon-chevron-left, button.glyphicon.glyphicon-fast-ba
     vertical-align: middle;
 }
 
-/* project */
-.projectName {
-    background-color: #eaeaea;
-    margin-left: 10%;
-    border-bottom-left-radius: 4px;
-    border-top-left-radius: 4px;
-}
-
-.projectArrowButton {
-    background-color: #eaeaea;
-    border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px;
-}
-
-    .projectArrowButton > button {
-        border: none;
-        background: none;
-        padding: 8px;
-        color: #d0d0d0
-    }
-
-/* employee*/
-
-/*employeegantt*/
+/* employee */
 .employeeCss {
     background-color: #eaeaea;
     margin-left: 10%;
@@ -158,13 +132,26 @@ tr > button.glyphicon.glyphicon-chevron-left, button.glyphicon.glyphicon-fast-ba
     border-top-left-radius: 4px;
 }
 
+.employeeArrowButton {
+    background-color: #eaeaea;
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+    .employeeArrowButton > button {
+        border: none;
+        background: none;
+        padding: 8px;
+        color: #d0d0d0
+    }
+
 /*projectgantt*/
-.employee {
+.project {
     background-color: #b0c0d3;
     border-radius: 4px;
 }
 
-.employeeName {
+.projectName {
     background-color: whitesmoke;
     padding-left: 30%;
     text-align: right;
